DB& API setup
